--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,5 @@
 <p><%= @article.title%></p>
 <p><%= @article.content%></p>
 <form >
-  <button></button>
+  <button> type="submit"</button>
 </form>
