Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,5 @@
 <p><%= @article.title%></p>
 <p><%= @article.content%></p>
-<form >
-  <button> type="submit"</button>
+<form method="POST" action="/articles/<%= @article.id %>">
+  <input
 </form>
