--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,6 @@
 <p><%= @article.title%></p>
 <p><%= @article.content%></p>
 <form method="POST" action="/articles/<%= @article.id %>">
-  <input
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete">
 </form>
